--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
          <!-- sockets.io -->
-  <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script type="text/javascript" 
+  src="https://cdn.socket.io/socket.io-1.4.5.js">
+</script>
 
     </head>
     <body>
