--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,11 @@
   <script type="text/javascript" 
   src="https://cdn.socket.io/socket.io-1.4.5.js">
 
-var Socket;
-    function init() {
-      Socket = new WebSocket('ws://' + window.location.hostname + 'localhost:3005');
-      Socket.onmessage = function(event){
-        // receive the color data from the server
-        var data = JSON.parse(event.data);
-        console.log(data);//writing the data 
-      }
-    }  
-
 </script>
 
     </head>
-    <body onload="javascript:init()">
-        <p id="X">
-            hh</p>
-            <p id="Y">
-                hh</p>
-                <p id="Z">
-                    hh</p>
+    <body>
+        <p id="X">hh</p><p id="Y">hh</p><p id="Z">hh</p>
     </body>
   <script type="text/javascript" src="script.js"></script>
 </html>
