--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- normalize between browser -->
-        <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-         <!-- sockets.io -->
-  <script type="text/javascript" 
-  src="https://cdn.socket.io/socket.io-1.4.5.js">
-</script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- normalize between browser -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"
+    />
+    <!-- sockets.io -->
+    <script
+      type="text/javascript"
+      src="https://cdn.socket.io/socket.io-1.4.5.js"
+    ></script>
+  </head>
+  <body>
+    <p id="X">
+      hh
+    </p>
+    <p id="Y">
+      hh
+    </p>
+    <p id="Z">
+      hh
+    </p>
 
-    </head>
-    <body>
-        <p id="X">
-            hh</p>
-            <p id="Y">
-                hh</p>
-                <p id="Z">
-                    hh</p>
-    </body>
+    <button id="btn">Send random data</button>
+  </body>
   <script type="text/javascript" src="script.js"></script>
 </html>
